<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6C4B7"
    android:gravity="center">

    <ImageView
        android:id="@+id/blockAppIv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/text_app_limit"
        android:src="@drawable/icon_limit" />

    <TextView
        android:id="@+id/blockDeviceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/device_limit"
        android:textColor="#BF360C"
        android:textSize="24sp" />

    <Button
        android:id="@+id/offDeviceBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="#000000"
        android:text="@string/off_device"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/askParentBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="#FFDAB9"
        android:text="@string/text_ask_parent"
        android:textColor="#BF360C"
        android:textSize="16sp"
        android:textStyle="italic" />
</RelativeLayout>
